FIXED HOTFIX realigned print icons

--- a/sites/all/themes/effoundationtheme/css/ef.css
+++ b/sites/all/themes/effoundationtheme/css/ef.css
@@ -2119,14 +2119,14 @@ span.print_html, .views-page .print_html{
 	list-style: none;
 	position: absolute;
 	right: 2.4em;
-	top: 2em;
+	top: 1.85em;
 	z-index: 10;
 }
 span.print_pdf, .views-page .print_pdf{
 	list-style: none;
 	position: absolute;
 	right: 5.6em;
-    top: 2.35em;
+	top: 2.45em;
 	z-index: 10;
 }
 .section-publications  h1.title.secundary{
@@ -2136,7 +2136,7 @@ h1.parent_eurwork a, h1.parent_emcc a, h1.parent_eurwork a:hover, h1.parent_emcc
 	color: #fff;
 }
 h1.parent_eurwork ~ span.print_html, h1.parent_emcc ~ span.print_html {
-	top: 8.5em;
+  top: 8.55em;
 	right:2.4em;
 }
 .page-observatories-emcc-index h1.parent_eurwork ~ span.print_html, .page-observatories-emcc-index  h1.parent_emcc ~ span.print_html {
@@ -2146,7 +2146,7 @@ h1.parent_eurwork ~ span.print_html, h1.parent_emcc ~ span.print_html {
   top: 8.5em !important;
 }
 h1.parent_eurwork ~ span.print_pdf, h1.parent_emcc ~ span.print_pdf {
-	top: 8.8em;
+  top: 9.1em;
 	right:5.2em;
 }
 .page-observatories-emcc-index h1.parent_eurwork ~ span.print_pdf, .page-observatories-emcc-index  h1.parent_emcc ~ span.print_pdf {
